# CRequests

./: CMakeLists.txt  README.md
include/crequests/: crequests.h  options.h  response.h
src/: crequests.cpp  request.cpp  request.h  response.cpp
test/: CMakeLists.txt
test/src/: main.cpp
